# jira_scrum_project

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .txt  Dockerfile  POLICIES.md  README-staging.md  README.md  ai_test_run.py  build_from_jira.py  docker-compose.yml  generated_app.py  main.py  pyproject.toml  pytest.ini  rename_build_from_jira.py  requirements-dev.txt  requirements.txt  shortener.db  shortly_demo.db  url_shortening.db  validate_and_ticket.py
app_core/: .dockerignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  app.py  app_logging.py  audit_checklist.txt  config.py  docker-compose.yml  error_handlers.py  gunicorn.conf.py  models.py  pyproject.toml  pytest.ini  requirements.txt  short_code_service.py
app_core/.github/: PULL_REQUEST_TEMPLATE.md
app_core/deploy/: gunicorn.service
app_core/docs/: CONTRIBUTING.md  DATA_RETENTION.md  KAN-122.md  api.md  backup_restore_plan.md  postgres_provisioning.md
app_core/migrations/: kan_175_add_unique_short_code.py  kan_175_ensure_idx_urls_short_code.py
app_core/routes/: __init__.py  analytics.py  api.py  auth.py  contributing.py  dashboard.py  domains.py  health.py  home.py  pr_guidelines.py  sessions.py  shortener.py  tools_lint.py
app_core/scripts/: backups.sh  purge_old_clicks.py
app_core/tests/: conftest.py  test_accessibility.py  test_click_event.py  test_csrf_templates.py  test_custom_domains.py  test_db_connection_manager.py  test_db_urls.py  test_db_users.py  test_email_verification.py  test_expand_in_clause_params.py  test_geoip_enrichment.py  test_ip_anonymize.py  (+13 more)
(+98 files in other folders)
